--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -136,41 +136,44 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
-    <ClCompile Include="..\Classes\Audio.cpp" />
     <ClCompile Include="..\Classes\Common\GameData.cpp" />
-    <ClCompile Include="..\Classes\Common\SceneStack.cpp" />
     <ClCompile Include="..\Classes\Common\Object.cpp" />
-    <ClCompile Include="..\Classes\Common\Timer.cpp" />
+    <ClCompile Include="..\Classes\Engine\Actor\ActorComponent.cpp" />
+    <ClCompile Include="..\Classes\Engine\Actor\DisplayNode.cpp" />
+    <ClCompile Include="..\Classes\Engine\Actor\Actor.cpp" />
+    <ClCompile Include="..\Classes\Engine\Actor\SequentialInvoker.cpp" />
+    <ClCompile Include="..\Classes\Engine\Audio\Audio.cpp" />
     <ClCompile Include="..\Classes\Engine\Event\EventDispatcher.cpp" />
+    <ClCompile Include="..\Classes\Engine\Graphic2D\SceneStack.cpp" />
+    <ClCompile Include="..\Classes\Engine\MainLoop\Timer.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\ComboEffect.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\GameOverLabel.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\GetScoreLabel.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\LevelSummaryLabel.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\MatrixLayer.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\PuzzleScene.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\Star.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\StarMatrix.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\StarParticleEffect.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\StartLevelLabel.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\StatusBar.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\StatusLayer.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\TitleScene.cpp" />
     <ClCompile Include="..\Classes\Engine\Utilities\SingletonContainer.cpp" />
-    <ClCompile Include="..\Classes\GameObject\Component.cpp" />
-    <ClCompile Include="..\Classes\GameObject\DisplayNode.cpp" />
-    <ClCompile Include="..\Classes\GameObject\GameObject.cpp" />
-    <ClCompile Include="..\Classes\GameObject\SequentialInvoker.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
-    <ClCompile Include="..\Classes\Script\ComboEffect.cpp" />
-    <ClCompile Include="..\Classes\Script\GameOverLabel.cpp" />
-    <ClCompile Include="..\Classes\Script\GetScoreLabel.cpp" />
-    <ClCompile Include="..\Classes\Script\LevelSummaryLabel.cpp" />
-    <ClCompile Include="..\Classes\Script\MatrixLayer.cpp" />
-    <ClCompile Include="..\Classes\Script\PuzzleScene.cpp" />
-    <ClCompile Include="..\Classes\Script\Star.cpp" />
-    <ClCompile Include="..\Classes\Script\StarMatrix.cpp" />
-    <ClCompile Include="..\Classes\Script\StarParticleEffect.cpp" />
-    <ClCompile Include="..\Classes\Script\StartLevelLabel.cpp" />
-    <ClCompile Include="..\Classes\Script\StatusBar.cpp" />
-    <ClCompile Include="..\Classes\Script\StatusLayer.cpp" />
-    <ClCompile Include="..\Classes\Script\TitleScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
-    <ClInclude Include="..\Classes\Audio.h" />
     <ClInclude Include="..\Classes\Common\GameData.h" />
     <ClInclude Include="..\Classes\Common\IUpdateable.h" />
-    <ClInclude Include="..\Classes\Common\SceneStack.h" />
-    <ClInclude Include="..\Classes\Common\Timer.h" />
     <ClInclude Include="..\Classes\Common\Object.h" />
+    <ClInclude Include="..\Classes\Engine\Actor\ActorComponent.h" />
+    <ClInclude Include="..\Classes\Engine\Actor\DisplayNode.h" />
+    <ClInclude Include="..\Classes\Engine\Actor\Actor.h" />
+    <ClInclude Include="..\Classes\Engine\Actor\SequentialInvoker.h" />
+    <ClInclude Include="..\Classes\Engine\Actor\SoundPlayer.h" />
+    <ClInclude Include="..\Classes\Engine\Audio\Audio.h" />
     <ClInclude Include="..\Classes\Engine\Event\IEventData.h" />
     <ClInclude Include="..\Classes\Engine\Event\LegacyEvent.h" />
     <ClInclude Include="..\Classes\Engine\Event\EventArg1.h" />
@@ -178,27 +181,24 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Engine\Event\EventType.h" />
     <ClInclude Include="..\Classes\Engine\Event\IEventDispatcher.h" />
     <ClInclude Include="..\Classes\Engine\Event\IEventListener.h" />
+    <ClInclude Include="..\Classes\Engine\Graphic2D\SceneStack.h" />
+    <ClInclude Include="..\Classes\Engine\MainLoop\Timer.h" />
+    <ClInclude Include="..\Classes\Engine\Script\ComboEffect.h" />
+    <ClInclude Include="..\Classes\Engine\Script\GameOverLabel.h" />
+    <ClInclude Include="..\Classes\Engine\Script\GetScoreLabel.h" />
+    <ClInclude Include="..\Classes\Engine\Script\LevelSummaryLabel.h" />
+    <ClInclude Include="..\Classes\Engine\Script\MatrixLayer.h" />
+    <ClInclude Include="..\Classes\Engine\Script\PuzzleScene.h" />
+    <ClInclude Include="..\Classes\Engine\Script\Script.h" />
+    <ClInclude Include="..\Classes\Engine\Script\Star.h" />
+    <ClInclude Include="..\Classes\Engine\Script\StarMatrix.h" />
+    <ClInclude Include="..\Classes\Engine\Script\StarParticleEffect.h" />
+    <ClInclude Include="..\Classes\Engine\Script\StartLevelLabel.h" />
+    <ClInclude Include="..\Classes\Engine\Script\StatusBar.h" />
+    <ClInclude Include="..\Classes\Engine\Script\StatusLayer.h" />
+    <ClInclude Include="..\Classes\Engine\Script\TitleScene.h" />
     <ClInclude Include="..\Classes\Engine\Utilities\SingletonContainer.h" />
-    <ClInclude Include="..\Classes\GameObject\Component.h" />
-    <ClInclude Include="..\Classes\GameObject\DisplayNode.h" />
-    <ClInclude Include="..\Classes\GameObject\GameObject.h" />
-    <ClInclude Include="..\Classes\GameObject\SoundPlayer.h" />
-    <ClInclude Include="..\Classes\GameObject\SequentialInvoker.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
-    <ClInclude Include="..\Classes\Script\ComboEffect.h" />
-    <ClInclude Include="..\Classes\Script\GameOverLabel.h" />
-    <ClInclude Include="..\Classes\Script\GetScoreLabel.h" />
-    <ClInclude Include="..\Classes\Script\LevelSummaryLabel.h" />
-    <ClInclude Include="..\Classes\Script\MatrixLayer.h" />
-    <ClInclude Include="..\Classes\Script\PuzzleScene.h" />
-    <ClInclude Include="..\Classes\Script\Script.h" />
-    <ClInclude Include="..\Classes\Script\Star.h" />
-    <ClInclude Include="..\Classes\Script\StarMatrix.h" />
-    <ClInclude Include="..\Classes\Script\StarParticleEffect.h" />
-    <ClInclude Include="..\Classes\Script\StartLevelLabel.h" />
-    <ClInclude Include="..\Classes\Script\StatusBar.h" />
-    <ClInclude Include="..\Classes\Script\StatusLayer.h" />
-    <ClInclude Include="..\Classes\Script\TitleScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
