--- a/proj.win32/PopStar.vcxproj.filters
+++ b/proj.win32/PopStar.vcxproj.filters
@@ -120,6 +120,12 @@
     <ClCompile Include="..\Classes\Engine\Audio\Audio.cpp">
       <Filter>Classes\Engine\Audio</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Engine\Actor\ActorFactory.cpp">
+      <Filter>Classes\Engine\Actor</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Engine\Actor\BaseScriptComponent.cpp">
+      <Filter>Classes\Engine\Actor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -191,9 +197,6 @@
     <ClInclude Include="..\Classes\Engine\Script\PuzzleScene.h">
       <Filter>Classes\Engine\Script</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Engine\Script\Script.h">
-      <Filter>Classes\Engine\Script</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Engine\Script\Star.h">
       <Filter>Classes\Engine\Script</Filter>
     </ClInclude>
@@ -232,6 +235,12 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Engine\Utilities\GenericFactory.h">
       <Filter>Classes\Engine\Utilities</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Engine\Actor\ActorFactory.h">
+      <Filter>Classes\Engine\Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Engine\Actor\BaseScriptComponent.h">
+      <Filter>Classes\Engine\Actor</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
