--- a/proj.win32/PopStar.vcxproj.filters
+++ b/proj.win32/PopStar.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Classes\Engine\Audio">
       <UniqueIdentifier>{9e3a3300-7804-45e9-a14a-e6a2c670d9d7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Classes\Engine\Logic">
+      <UniqueIdentifier>{a10c367e-79e4-4851-aa19-22c604b5b269}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -131,6 +134,9 @@
     </ClCompile>
     <ClCompile Include="..\Classes\Engine\MainLoop\ProcessRunner.cpp">
       <Filter>Classes\Engine\MainLoop</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Engine\GameLogic\GameLogic.cpp">
+      <Filter>Classes\Engine\Logic</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -253,6 +259,15 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Engine\MainLoop\ProcessRunner.h">
       <Filter>Classes\Engine\MainLoop</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Engine\Actor\RenderComponent.h">
+      <Filter>Classes\Engine\Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Engine\GameLogic\GameLogic.h">
+      <Filter>Classes\Engine\Logic</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Engine\Actor\ActorID.h">
+      <Filter>Classes\Engine\Actor</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
