We can now create ComboEffect actors using .xml!

--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -151,7 +151,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\Engine\MainLoop\BaseProcess.cpp" />
     <ClCompile Include="..\Classes\Engine\MainLoop\ProcessRunner.cpp" />
     <ClCompile Include="..\Classes\Engine\MainLoop\Timer.cpp" />
-    <ClCompile Include="..\Classes\Engine\Script\ComboEffect.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\ComboEffectScript.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\GameOverLabel.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\GetScoreLabel.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\LevelSummaryLabel.cpp" />
@@ -195,7 +195,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Engine\MainLoop\BaseProcess.h" />
     <ClInclude Include="..\Classes\Engine\MainLoop\ProcessRunner.h" />
     <ClInclude Include="..\Classes\Engine\MainLoop\Timer.h" />
-    <ClInclude Include="..\Classes\Engine\Script\ComboEffect.h" />
+    <ClInclude Include="..\Classes\Engine\Script\ComboEffectScript.h" />
     <ClInclude Include="..\Classes\Engine\Script\GameOverLabel.h" />
     <ClInclude Include="..\Classes\Engine\Script\GetScoreLabel.h" />
     <ClInclude Include="..\Classes\Engine\Script\LevelSummaryLabel.h" />
