--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -183,9 +183,10 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Engine\Actor\SequentialInvoker.h" />
     <ClInclude Include="..\Classes\Engine\Actor\SoundPlayer.h" />
     <ClInclude Include="..\Classes\Engine\Audio\Audio.h" />
+    <ClInclude Include="..\Classes\Engine\Event\EvtDataPlayerExplodedStars.h" />
+    <ClInclude Include="..\Classes\Engine\Event\EvtDataGeneric.h" />
     <ClInclude Include="..\Classes\Engine\Event\IEventData.h" />
-    <ClInclude Include="..\Classes\Engine\Event\LegacyEvent.h" />
-    <ClInclude Include="..\Classes\Engine\Event\EventArg1.h" />
+    <ClInclude Include="..\Classes\Engine\Event\BaseEventData.h" />
     <ClInclude Include="..\Classes\Engine\Event\EventDispatcher.h" />
     <ClInclude Include="..\Classes\Engine\Event\EventType.h" />
     <ClInclude Include="..\Classes\Engine\Event\IEventDispatcher.h" />
