--- a/proj.win32/PopStar.vcxproj.filters
+++ b/proj.win32/PopStar.vcxproj.filters
@@ -161,9 +161,6 @@
     <ClInclude Include="..\Classes\Engine\Utilities\SingletonContainer.h">
       <Filter>Classes\Engine\Utilities</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Engine\Event\EventArg1.h">
-      <Filter>Classes\Engine\Event</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Engine\Event\EventDispatcher.h">
       <Filter>Classes\Engine\Event</Filter>
     </ClInclude>
@@ -174,9 +171,6 @@
       <Filter>Classes\Engine\Event</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Engine\Event\IEventDispatcher.h">
-      <Filter>Classes\Engine\Event</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Engine\Event\LegacyEvent.h">
       <Filter>Classes\Engine\Event</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Engine\Event\IEventData.h">
@@ -268,6 +262,15 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Engine\Script\ComboEffectScript.h">
       <Filter>Classes\Engine\Script</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Engine\Event\EvtDataPlayerExplodedStars.h">
+      <Filter>Classes\Engine\Event</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Engine\Event\EvtDataGeneric.h">
+      <Filter>Classes\Engine\Event</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Engine\Event\BaseEventData.h">
+      <Filter>Classes\Engine\Event</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
