GameOverLabelScript is now created using xml.

--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -151,7 +151,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\Engine\MainLoop\ProcessRunner.cpp" />
     <ClCompile Include="..\Classes\Engine\MainLoop\Timer.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\ComboEffectScript.cpp" />
-    <ClCompile Include="..\Classes\Engine\Script\GameOverLabel.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\GameOverLabelScript.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\GetScoreLabel.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\LevelSummaryLabel.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\MatrixLayer.cpp" />
@@ -194,7 +194,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Engine\MainLoop\ProcessRunner.h" />
     <ClInclude Include="..\Classes\Engine\MainLoop\Timer.h" />
     <ClInclude Include="..\Classes\Engine\Script\ComboEffectScript.h" />
-    <ClInclude Include="..\Classes\Engine\Script\GameOverLabel.h" />
+    <ClInclude Include="..\Classes\Engine\Script\GameOverLabelScript.h" />
     <ClInclude Include="..\Classes\Engine\Script\GetScoreLabel.h" />
     <ClInclude Include="..\Classes\Engine\Script\LevelSummaryLabel.h" />
     <ClInclude Include="..\Classes\Engine\Script\MatrixLayer.h" />
