--- a/proj.win32/PopStar.vcxproj.filters
+++ b/proj.win32/PopStar.vcxproj.filters
@@ -60,9 +60,6 @@
     <ClCompile Include="..\Classes\Engine\Event\EventDispatcher.cpp">
       <Filter>Classes\Engine\Event</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Engine\Actor\DisplayNode.cpp">
-      <Filter>Classes\Engine\Actor</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\Engine\Actor\SequentialInvoker.cpp">
       <Filter>Classes\Engine\Actor</Filter>
     </ClCompile>
@@ -135,6 +132,12 @@
     <ClCompile Include="..\Classes\Engine\Script\GameOverLabelScript.cpp">
       <Filter>Classes\Engine\Script</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Engine\Actor\BaseRenderComponent.cpp">
+      <Filter>Classes\Engine\Actor</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Engine\Actor\GeneralRenderComponent.cpp">
+      <Filter>Classes\Engine\Actor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -166,9 +169,6 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Engine\Event\IEventData.h">
       <Filter>Classes\Engine\Event</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Engine\Actor\DisplayNode.h">
-      <Filter>Classes\Engine\Actor</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Engine\Actor\SequentialInvoker.h">
       <Filter>Classes\Engine\Actor</Filter>
@@ -239,9 +239,6 @@
     <ClInclude Include="..\Classes\Engine\MainLoop\ProcessRunner.h">
       <Filter>Classes\Engine\MainLoop</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Engine\Actor\RenderComponent.h">
-      <Filter>Classes\Engine\Actor</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Engine\GameLogic\GameLogic.h">
       <Filter>Classes\Engine\Logic</Filter>
     </ClInclude>
@@ -262,6 +259,12 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Engine\Script\GameOverLabelScript.h">
       <Filter>Classes\Engine\Script</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Engine\Actor\BaseRenderComponent.h">
+      <Filter>Classes\Engine\Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Engine\Actor\GeneralRenderComponent.h">
+      <Filter>Classes\Engine\Actor</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
