The LevelSummaryLabel actor can now be created using xml.

--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -154,7 +154,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\Engine\Script\ComboEffectScript.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\GameOverLabelScript.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\GetScoreLabelScript.cpp" />
-    <ClCompile Include="..\Classes\Engine\Script\LevelSummaryLabel.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\LevelSummaryLabelScript.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\MatrixLayer.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\PuzzleScene.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\Star.cpp" />
@@ -197,7 +197,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Engine\Script\ComboEffectScript.h" />
     <ClInclude Include="..\Classes\Engine\Script\GameOverLabelScript.h" />
     <ClInclude Include="..\Classes\Engine\Script\GetScoreLabelScript.h" />
-    <ClInclude Include="..\Classes\Engine\Script\LevelSummaryLabel.h" />
+    <ClInclude Include="..\Classes\Engine\Script\LevelSummaryLabelScript.h" />
     <ClInclude Include="..\Classes\Engine\Script\MatrixLayer.h" />
     <ClInclude Include="..\Classes\Engine\Script\PuzzleScene.h" />
     <ClInclude Include="..\Classes\Engine\Script\Star.h" />
